# ClawQuest

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  mobile-release.yml
convex/: apiSurface.typecheck.ts  downloads.test.ts  downloads.ts  httpApiV1.handlers.test.ts  search.test.ts  search.ts  skills.countPublicSkills.test.ts  skills.listPublicPage.test.ts  skills.listPublicPageV2.test.ts  skills.ownership.test.ts  skills.pendingScanQueue.test.ts  skills.public.test.ts  skills.publicModeration.test.ts  skills.rateLimit.test.ts  skills.reclaim.test.ts  skills.slugAvailability.test.ts  skills.ts  skills.versions.public.test.ts  soulDownloads.ts  souls.public.test.ts  souls.ts  versionFileAccess.test.ts
convex/httpApiV1/: skillsV1.ts  soulsV1.ts
convex/lib/: access.test.ts  githubBackup.ts  githubSoulBackup.ts
desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  manager.rs
docs/: architecture.md  deploy.md  manual-testing.md  mobile-apk-plan.md  troubleshooting.md
e2e/: prod-http-smoke.e2e.test.ts
scripts/: configure-android-release.mjs  copy-og-assets.ts  generate_claw_quest_icon.ps1
server/lib/: convexSite.test.ts  convexSite.ts
server/og/: ogAssets.test.ts  ogAssets.ts
src/: styles.css
src/__tests__/: skill-detail-page.test.tsx  skill-route-loader.test.ts  (+2 more)
src/lib/: og.ts  (+8 more)
(+23 files in other folders)
