[package]
name = "claw-quest"
version = "0.1.2"
description = "Drag-and-drop Claw Quest skill manager"
edition = "2021"

[lib]
name = "claw_quest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
json5 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
