[package]
name = "claw-quest"
version = "0.1.4"
description = "Drag-and-drop Claw Quest skill manager"
edition = "2021"

[lib]
name = "claw_quest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
data-encoding = "2"
futures-util = "0.3"
json5 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
